[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "5168732-sands-python"
version = "0.1.0"
description = "Signals and Systems project: generating, modifying and plotting signals."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Paul Smit", email = "pjmsmit@tudelft.nl" }
]
dependencies = [
  "numpy",
  "matplotlib",
  "pytest"
]
